--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,70 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+/* ====================================  CUSTOM TEXT  ==================================== */
+h3 {
+    color: #900;
+    font-size: 140%;
+    padding-top: 3%;
+}
+p {
+    font-family: sans-serif;
+}
+
+/* ====================================  FRAMES  ==================================== */
+#blackFrame {
+    background-color: #444;
+    margin: 0% 5% 8% 5%;
+    padding-top: 3%;
+    padding-bottom: 5%;
+}
+#whitePanel {
+    background-color: white;
+    padding: 3% 25% 3% 3%;
+}
+#allContent {
+    background-color: #EEE;
+    margin-top: -3%;
+    padding: 0% 3% 8% 3%;
+}
+
+/* ====================================  TABLE  ==================================== */
+table {
+    table-layout: fixed;
+    background-color: #CCC;
+    width: 100%;
+    margin-top: 2%;
+}
+#header {
+    background-color: #CCC;
+    font-weight: bold;
+    height: 2%;
+}
+tr {
+    background-color: #EEE;
+}
+td {
+    padding-left: 1%;
+}
+input {
+    width: 60%;
+    height: 40px;
+    margin: 3px 0px 3px 0px;
+}
+
+/* ====================================  BOTTOM  ==================================== */
+#button, #colorChanger {
+    float: right;
+    display: inline-block;
+    background-color: #900;
+    color: white;
+    width: 10%;
+    padding: 1% 0% 1% 0%;
+    border-radius: 5%;
+    margin: 3% 1% 0% 1%;
+    text-align: center;
+    font-family: Arial;
+    font-size: 150%;
+}
+#result {
+    float: left;
+    font-family: verdana, sans-serif;
+    color: #300;
+}
