--- a/app/views/calculator/index.erb
+++ b/app/views/calculator/index.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel='stylesheet' href='../assets/stylesheets/application.css' type="text/css"/>
-	<script src='../assets/javascripts/application.js'></script>
+	<link rel='stylesheet' href='../../assets/stylesheets/application.css' type="text/css"/>
+	<script src='../../assets/javascripts/application.js'></script>
 	<title>Calculator</title>
 </head>
 <body id="background" style="background-color:#990000">
